消除部分warning